--- a/style.css
+++ b/style.css
@@ -104,6 +104,19 @@ main {
   border: solid 1px rgba(255, 255, 255, 0.5);
   color: rgba(255, 255, 255, 0.5);
 }
+/* when rating high as described by js */
+.high-rating {
+  color: #3ba17c;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+.sorter {
+  width: 90%;
+  margin: 0 auto;
+  padding: 6px;
+}
 
 @media screen and (min-width: 600px) {
   main {
